fix header alignment

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 .layout {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 200px 1fr;
   justify-items: center;
   width: 100%;
   height: 100vh;
@@ -16,7 +16,7 @@
 }
 
 .header {
-  height: 200px;
+  align-self: center;
 }
 
 .main {
